updating old tags & posts

--- a/site/content/post/2004-07-23-617.md
+++ b/site/content/post/2004-07-23-617.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: Backpacking & Posessions
 type: post
 date: 2004-07-23T00:05:00+00:00
 url: /617/
@@ -14,7 +15,7 @@ lj_picture_keyword:
 post_views_count:
   - 511
 categories:
-  - LiveJournal
+
   - "The 'Zealand"
 
 ---
