--- a/site/content/post/2004-07-30-618.md
+++ b/site/content/post/2004-07-30-618.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: Arrived in Auckland
 type: post
 date: 2004-07-30T12:38:00+00:00
 url: /618/
@@ -10,7 +11,7 @@ lj_permalink:
 post_views_count:
   - 403
 categories:
-  - LiveJournal
+
   - "The 'Zealand"
 
 ---
