--- a/site/content/post/2004-10-28-626.md
+++ b/site/content/post/2004-10-28-626.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: Pterry
 type: post
 date: 2004-10-28T22:54:00+00:00
 url: /626/
@@ -10,8 +11,12 @@ lj_permalink:
 post_views_count:
   - 486
 categories:
-  - LiveJournal
   - "The 'Zealand"
+tags:
+- discworld
+- terry pratchett
+- travelling
+- backpacking
 
 ---
 I&#8217;m going to see Terry Pratchett on Sunday.
