--- a/site/content/post/2004-11-10-628.md
+++ b/site/content/post/2004-11-10-628.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: November in Summer
 type: post
 date: 2004-11-10T22:34:00+00:00
 url: /628/
@@ -10,8 +11,11 @@ lj_permalink:
 post_views_count:
   - 531
 categories:
-  - LiveJournal
   - "The 'Zealand"
+tags:
+- travelling
+- backpacking
+- working holiday
 
 ---
 It&#8217;s funny to think that it&#8217;s November-y back home. Here it&#8217;s summer holiday weather. We sat outside O&#8217;Carrolls, an Irish bar, for a few hours this evening, in t-shirts or string tops, and jandals. Myself, Caroline, Liz and Gary and Phil decided to bring lots of randoms along to the pub with us. So we were joined by what turned out to be 5 Hot Guys.
