--- a/site/content/post/2004-11-17-so-4.md
+++ b/site/content/post/2004-11-17-so-4.md
@@ -15,8 +15,13 @@ lj_picture_keyword:
 post_views_count:
   - 564
 categories:
-  - LiveJournal
   - "The 'Zealand"
+  - Updates
+tags:
+- travelling
+- backpacking
+- bereavement
+
 
 ---
 This morning I decided to take a sickie from work because I was tired and not feeling the best. So I called in sick, changed my doctor&#8217;s appointment to today and crawled back to bed. Whereupon the phone rang. It was my dad, telling me that my grandfather had died. I still don&#8217;t know when exactly. And I&#8217;m not exactly sure of the details except that he was out on the farm, picking apples on a lovely November day.
