--- a/site/content/post/2004-12-17-647.md
+++ b/site/content/post/2004-12-17-647.md
@@ -10,8 +10,8 @@ lj_permalink:
 post_views_count:
   - 394
 categories:
-  - LiveJournal
-  - "The 'Zealand"
+
+  - Updates
 
 ---
 At Singapore. Transitting through to Dubai. Have already stopped at brisbane. I wanna be at HOME! and it&#8217;s gonna be about 23 hours from what I can see&#8230; WAAAAAAH!
