--- a/site/content/post/2004-12-20-648.md
+++ b/site/content/post/2004-12-20-648.md
@@ -10,8 +10,8 @@ lj_permalink:
 post_views_count:
   - 441
 categories:
-  - LiveJournal
-  - "The 'Zealand"
+
+  - Updates
 
 ---
 Being at home is hugely strange, and amazingly good. My brother arrived this morning, so now my little family is complete. The parents were so glad to see both of us, and I was so glad to see both of them. I don&#8217;t want to stay, although I&#8217;m already dreading the journey back, but it&#8217;s bloody good to be home for a while anyway. Saturday was spent shopping with mum and visiting my gran, who was also super-happy to see me. We also went out to my grandparents&#8217; farm, which was a little strange without my grandfather there. Sunday was finally seeing the maeves and giving them much overdue hugs.
