--- a/site/content/post/2004-12-27-649.md
+++ b/site/content/post/2004-12-27-649.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: Compliments of the Season!
 type: post
 date: 2004-12-27T15:25:00+00:00
 url: /649/
@@ -16,7 +17,6 @@ lj_picture_keyword:
 post_views_count:
   - 588
 categories:
-  - LiveJournal
   - Updates
 
 ---
