--- a/site/content/post/2005-02-10-672.md
+++ b/site/content/post/2005-02-10-672.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: Elusive Dunedin
 type: post
 date: 2005-02-10T13:32:00+00:00
 url: /672/
@@ -10,9 +11,14 @@ lj_permalink:
 post_views_count:
   - 381
 categories:
-  - LiveJournal
   - "The 'Zealand"
-
+tags:
+- travelling
+- backpacking
+- dunedin
+- fruits
+- harajuku
+- 
 ---
 I can&#8217;t quite seem to get a handle on Dunedin. I&#8217;m not sure why, but it sort of eludes me. Maybe it&#8217;s because most of the students aren&#8217;t here, and there are usually around 25,000 of them? I&#8217;m not sure, but I think I could possibly like this town, once I get the hang of it.
   
