--- a/site/content/post/2005-06-06-762.md
+++ b/site/content/post/2005-06-06-762.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: No sXe for me!
 type: post
 date: 2005-06-06T15:24:00+00:00
 url: /762/
@@ -10,8 +11,13 @@ lj_permalink:
 post_views_count:
   - 414
 categories:
-  - LiveJournal
   - "The 'Zealand"
+tags:
+- parties
+- travelling
+- backpacking
+- auckland
+
 
 ---
 I will never be straightedge.
