--- a/site/content/post/2006-02-14-902.md
+++ b/site/content/post/2006-02-14-902.md
@@ -15,7 +15,7 @@ lj_picture_keyword:
 post_views_count:
   - 634
 categories:
-  - LiveJournal
+  - words are great
 tags:
   - lift the spirit and gladden the heart
   - love
