--- a/site/content/post/2006-11-22-924.md
+++ b/site/content/post/2006-11-22-924.md
@@ -12,34 +12,27 @@ post_views_count:
   - 876
 categories:
   - Dublin
-  - LiveJournal
   - "The 'Zealand"
 tags:
   - ah! sweet nostalgia
 
 ---
-I&#8217;ve been thinking a lot about New Zealand since I came to dublin. Memories keep bobbing to the surface of my mind when I least expect them to. I&#8217;m dreaming about situations that did or could have taken place, following conversations to what could have been their conclusion, closing my eyes and seeing myself sitting on the verandah of the hostel in Okarito as the sun went down, drinking hot chocolate in Katipo, going to McDonalds in Auckland in the middle of the night with Legoboy, running away from some boy I&#8217;d kissed on Stewart Island to go looking at the clearest sky and the brightest stars I&#8217;d ever seen, trying to fly my kite the park in Christchurch and eventually succeeding.
+I&#8217;ve been thinking a lot about New Zealand since I came to Dublin. Memories keep bobbing to the surface of my mind when I least expect them to. I&#8217;m dreaming about situations that did or could have taken place, following conversations to what could have been their conclusion, closing my eyes and seeing myself sitting on the verandah of the hostel in Okarito as the sun went down, drinking hot chocolate in Katipo, going to McDonalds in Auckland in the middle of the night with Legoboy, running away from some boy I&#8217;d kissed on Stewart Island to go looking at the clearest sky and the brightest stars I&#8217;d ever seen, trying to fly my kite the park in Christchurch and eventually succeeding.
 
 It&#8217;s odd, too, the sorts of parallels that pop up.
 
-<!-- Posted pictures -->
+![The Taking of the Christ by Caravaggio](/img/blog/caravaggio.jpg)    
 
-<table>
-  <tr>
-    <td>
-      <a href="http://pics.livejournal.com/froodie/pic/0002bc8b/g4"><img src="http://pics.livejournal.com/froodie/pic/0002bc8b/s320x240" alt="The Taking of the Christ by Caravaggio" width="320" height="234" border="0" /></a>
-    </td>
-    
-    <td>
-      <strong>The Taking of the Christ by Caravaggio</strong>
-    </td>
-  </tr>
-</table>
+**The Taking of the Christ by Caravaggio**
 
-Painting in the National Gallery of Ireland, Dublin[<img src="http://pics.livejournal.com/froodie/pic/0002a6he/s320x240" alt="Witness Caravaggio by Kees Bruin" width="264" height="240" border="0" />][1]**Witness Caravaggio by Kees Bruin**
+Painting in the National Gallery of Ireland
+
+![Witness Caravaggio by Kees Bruin](/img/blog/keesbruin.jpg)
+
+**Witness Caravaggio by Kees Bruin**
 
 Painting in Christchurch Art Gallery, New Zealand
 
-<!-- End of Posted pictures -->
+
 
  [1]: http://pics.livejournal.com/froodie/pic/0002a6he/g4
