--- a/site/content/post/2004-12-07-640.md
+++ b/site/content/post/2004-12-07-640.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: Parties & Strolls
 type: post
 date: 2004-12-07T00:29:00+00:00
 url: /640/
@@ -12,12 +13,10 @@ lj_picture_keyword:
 post_views_count:
   - 365
 categories:
-  - LiveJournal
+ 
   - "The 'Zealand"
 
 ---
-So, an explanation of that previous post may be in order&#8230;.
-
 It was a hard-out hardcore weekend. Mostly for others, not really for me. I went for a couple of drinks on friday after work with the boys and the girls from GE, on account of it being my last day and of them all being great. One drink became more than that, and, well, I became drunk. Tequila shots and professing my (unfelt) adoration for my mate&#8217;s flatmate were some of the things that I recall, along with spilling an entire bottle of beer on myself. Yuk. Got myself a kebab and wandered home about half eleven (i think. i am always vague with time, even when my brain is functioning normally). Managed to eat most of my kebab and then said I&#8217;d go out with Bulabula and some of the guys. I went into my room and got changed, and then promptly passed out until 4am. dumb.
   
 Saturday was one of those blobby pointless days, where i spent money on cute underwear to cheer myself up, but we did have a bit of a thing for Gary&#8217;s birthday, which involved 12 bottles of bubbly. This got everyone hugely giddy as early as half past seven, and culminated in three of the guys dragging up and all of us going out next door. I decided to get all dressed up and wore my lil grey dress which is super cute. But then one of the girls took a photo of the back of me and it was NOT A PRETTY SIGHT. I tried not to get disheartened, but I had a headache before I went out, the guys in drag were getting messy and there was waaay to much flashing of Le Cock for the mood I was in. So I went home. And went to bed. And was glad of that fact.
@@ -26,4 +25,4 @@ Yesterday was my new healthy thing. I walked out to Mission Bay, which is a real
   
 Went for another walk today, round and round and round and round Albert Part with Sarah. While eating a chocolate bar and drinking vanilla coke, but who cares, it&#8217;s the exercise that matters.
 
-Tomorrow I&#8217;m planning on going to Waiheke for the day. Hopefully! And thursday maybe Rotovegas or Wellington or Taupo or Hastings. SOMEWHERE that isn&#8217;t auckland anyway.
+Tomorrow I&#8217;m planning on going to Waiheke for the day. Hopefully! And thursday maybe Rotovegas or Wellington or Taupo or Hastings. SOMEWHERE that isn&#8217;t Auckland anyway.
