--- a/site/content/post/2004-12-10-642.md
+++ b/site/content/post/2004-12-10-642.md
@@ -1,6 +1,7 @@
 ---
 author: Sarah
 type: post
+title: Taupo
 date: 2004-12-10T18:31:00+00:00
 url: /642/
 lj_itemid:
@@ -10,7 +11,6 @@ lj_permalink:
 post_views_count:
   - 311
 categories:
-  - LiveJournal
   - "The 'Zealand"
 
 ---
