--- a/site/content/post/2005-02-12-673.md
+++ b/site/content/post/2005-02-12-673.md
@@ -1,5 +1,6 @@
 ---
 author: Sarah
+title: Soggy in Dunedin
 type: post
 date: 2005-02-12T12:08:00+00:00
 url: /673/
@@ -12,7 +13,6 @@ lj_picture_keyword:
 post_views_count:
   - 399
 categories:
-  - LiveJournal
   - "The 'Zealand"
 
 ---
