--- a/site/content/post/2006-07-31-908.md
+++ b/site/content/post/2006-07-31-908.md
@@ -11,7 +11,7 @@ lj_permalink:
 post_views_count:
   - 523
 categories:
-  - LiveJournal
+  - Updates
 
 ---
   * Went on a three-pub pub crawl without a single drop of alchohol (in about an hour total).
