--- a/site/content/post/2009-01-25-doggone.md
+++ b/site/content/post/2009-01-25-doggone.md
@@ -15,7 +15,7 @@ lj_picture_keyword:
 post_views_count:
   - 823
 categories:
-  - LiveJournal
+  - Updates
 
 ---
 [<img height="240" border="0" align="left" width="186" src="http://pics.livejournal.com/froodie/pic/0002k1e9/s320x240" alt="" />][1]This is Socks. She&#8217;s been my dog for the last 13 years. She was very small, very cute, very mono-ocular, very snuggly and very smelly from time to time. She loved begging for food, going for walks, sleeping and whoring round the neighbours for food, walks and cuddles. When it was time for dinner, she would run up and down our hall, doing 360-degree spins of excitement and grunting with joy. She was too small to jump up on laps and couches much of the time, but loved being picked up and tucked under your arm.
